# routes/api.php
@@ -45,6 +45,7 @@ Route::get('/reponses/{id}', [ReponseController::class, 'show']);
 Route::put('/reponses/{id}', [ReponseController::class, 'update']);
 Route::delete('/reponses/{id}', [ReponseController::class, 'destroy']);
 Route::post('/nutrition/calculate', [NutritionController::class, 'calculate']);
+Route::post('/nutrition/recommendation', [NutritionController::class, 'recommendation']);
 
 Route::put('/user/{id}/update-maladie-chronique', [UtilisateurController::class, 'updateMaladieChronique']);
 
